--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
