--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="patientsApp">
 <head>
-  <title>Node-Mongo</title>
+  <title>Patient DB</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
   <body ng-controller="patientsController">
