--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,6 @@
     </div>
 
     <script src="node_modules/angular/angular.js"></script>
-    <script src="./public/js/app.js"></script>
+    <script src="public/js/app.js"></script>
   </body>
 </html>
