--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
     </div>
 
-    <script src="node_modules/angular/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="public/js/app.js"></script>
   </body>
 </html>
